<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorMain"
    android:id="@+id/activity_add_edit_reminder"
    tools:context=".ReminderModule.AddEditReminderActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
...
        android:layout_height="wrap_content"
        android:textColorHint="#929aab"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="20sp"
        android:freezesText="true"
        android:ems="10"
        android:hint="@string/title"

        android:inputType="text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_title"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
...
        android:freezesText="true"
        android:ems="10"
        android:hint="@string/note"

        android:inputType="textMultiLine">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_Note"
            android:singleLine="true"
            android:textColor="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
...
        android:ems="10"
        android:hint="@string/date"
        android:focusable="false"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="20sp"
        android:freezesText="true"
        android:id="@+id/edittext_date"
        android:singleLine="true"
        android:textColor="@color/colorText"
        />

    <EditText
        android:layout_width="match_parent"
...
        android:ems="10"
        android:hint="@string/time"
        android:focusable="false"
        android:paddingVertical="20dp"
        android:layout_marginHorizontal="20sp"
        android:freezesText="true"
        android:id="@+id/edittext_time"
        android:singleLine="true"
        android:textColor="@color/colorText"
        />


    <Spinner
...
        android:backgroundTint="@color/colorAccent"
        android:padding="10sp"
        android:layout_marginTop="10sp"
        android:spinnerMode="dropdown"
        android:popupElevation="3sp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_priority"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notification_check"
        android:textColor="@color/colorTextHint"
...
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/submit_btn"
        android:text="@string/add"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/update_btn"
        android:layout_weight="1"
...
