...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/mainactivity"

        android:layout_height="match_parent"
        tools:context=".MainModule.MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
...
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:background="@drawable/imagebutton_shape"                android:layout_width="wrap_content"
                        android:src="@drawable/calendar"
                        android:id="@+id/calendar_btn"
                        android:layout_height="wrap_content">

                    </ImageButton>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                    android:gravity="center"
                    android:padding="20sp"
                    android:orientation="vertical">
                    <ImageButton
                        android:background="@drawable/imagebutton_shape"                    android:layout_width="wrap_content"
                        android:src="@drawable/alarm"
                        android:id="@+id/alarm_btn"
                        android:layout_height="wrap_content">

                    </ImageButton>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:background="@drawable/imagebutton_shape"
                        android:layout_width="wrap_content"
                        android:src="@drawable/information"
                        android:id="@+id/profile_btn"
                        android:layout_height="wrap_content">

                    </ImageButton>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:background="@drawable/imagebutton_shape"                    android:layout_width="wrap_content"
                        android:src="@drawable/gear"
                        android:id="@+id/settings_btn"
                        android:layout_height="wrap_content">

                    </ImageButton>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
